syntax = "proto3";
option go_package = "/reminder-service/proto";
package reminders;

import "google/protobuf/timestamp.proto";

service ReminderService {
    rpc ScheduleReminder(ScheduleReminderRequest) returns (ScheduleReminderResponse);
}

message ScheduleReminderRequest {
    int64 invoice_id = 1;
    string customer_email = 2;
    google.protobuf.Timestamp reminder_time = 3;
    string message = 4;
}

message ScheduleReminderResponse {
    string status = 1;
}